--- a/index.html
+++ b/index.html
@@ -40,37 +40,6 @@
 				</div>
 			</div>
 		</div>
-	
-		<div class="spin-two-three" id="spin-b">
-			<div class="spinner">
-				<div class="slices">
-					<div class="slice" 	data-name="Uno" 		>1</div>
-					<div class="slice" 	data-name="Due" 		>2</div>
-					<div class="slice" 	data-name="Tre" 		>3</div>
-					<div class="slice" 	data-name="Quattro" 	>4</div>
-					<div class="slice" 	data-name="Cinque" 		>5</div>
-					<div class="slice" 	data-name="Sei" 		>6</div>
-					<div class="slice" 	data-name="Sette"	 	>7</div>
-					<div class="slice" 	data-name="Otto" 		>8</div>
-					<div class="slice" 	data-name="Nove"	 	>9</div>
-					<div class="slice"	data-name="Dieci" 		>10</div>
-				</div>
-			</div>
-			<div class="spinner">
-				<div class="slices">
-					<div class="slice" 	data-name="Uno" 		>1</div>
-					<div class="slice" 	data-name="Due" 		>2</div>
-					<div class="slice" 	data-name="Tre" 		>3</div>
-					<div class="slice" 	data-name="Quattro" 	>4</div>
-					<div class="slice" 	data-name="Cinque" 		>5</div>
-					<div class="slice" 	data-name="Sei" 		>6</div>
-					<div class="slice" 	data-name="Sette"	 	>7</div>
-					<div class="slice" 	data-name="Otto" 		>8</div>
-					<div class="slice" 	data-name="Nove"	 	>9</div>
-					<div class="slice"	data-name="Dieci" 		>10</div>
-				</div>
-			</div>
-		</div>
 	</div>
 
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.9.5/plugins/CSSPlugin.min.js"></script>
@@ -79,28 +48,7 @@
 	<script src="js/spin-two-three.js"></script>
 
 	<script>
-		var spinA = new SpinTwoThree(document.querySelector("#spin-a"), "spin-a");
-		spinA.addEventListener("spincomplete", onSpinComplete);
-
-		function onSpinComplete(e)
-		{
-			console.log(e.slots);
-		}
-
-		setTimeout(function(){ spinA.spin(); }, 1000);
-		
-		
-		var spinB = new SpinTwoThree(document.querySelector("#spin-b"), ["spin-b", "spin-a"]);
-		spinB.addEventListener("spincomplete", onSpinComplete);
-
-		function onSpinComplete(e)
-		{
-			console.log(e.slots);
-		}
-
-		setTimeout(function(){ spinB.spin(); }, 2000);
-		
-		var spinC = new SpinTwoThree(document.querySelector("#spin-c"), "spin-c");
+		var spinB = new SpinTwoThree(document.querySelector("#spin-a"), "spin-a");
 	</script>
 </body>
 </html>
