Added images in horizontal version
Please, consider that this version still is in WIP so the CSS is a mess.

--- a/horizontal.html
+++ b/horizontal.html
@@ -9,38 +9,34 @@
 <body>
 	<div class="">
 		<div class="controls">
-			<a href="#" class="spin-two-three-prev spin-a">&lt; PREV</a> -
+			<a href="#" class="spin-two-three-prev spin-b">&lt; PREV</a> -
 			<a href="#" class="spin-two-three-spin spin-all">SPIN!</a> -
-			<a href="#" class="spin-two-three-next spin-a spin-b">NEXT &gt;</a>
+			<a href="#" class="spin-two-three-next spin-b">NEXT &gt;</a>
 		</div>
 	
 		<div class="spin-two-three horizontal" id="spin-b">
 			<div class="spinner">
 				<div class="slices">
-					<div class="slice" 	data-name="Uno" 		>1</div>
-					<div class="slice" 	data-name="Due" 		>2</div>
-					<div class="slice" 	data-name="Tre" 		>3</div>
-					<div class="slice" 	data-name="Quattro" 	>4</div>
-					<div class="slice" 	data-name="Cinque" 		>5</div>
-					<div class="slice" 	data-name="Sei" 		>6</div>
-					<div class="slice" 	data-name="Sette"	 	>7</div>
-					<div class="slice" 	data-name="Otto" 		>8</div>
-					<div class="slice" 	data-name="Nove"	 	>9</div>
-					<div class="slice"	data-name="Dieci" 		>10</div>
+					<div class="slice" 	data-name="Hipster" 		><img src="img/horizontal/hipster.png"></div>
+					<div class="slice" 	data-name="Zombie" 			><img src="img/horizontal/zombie.png"></div>
+					<div class="slice" 	data-name="Geek" 			><img src="img/horizontal/geek.png"></div>
+					<div class="slice" 	data-name="Skate Girl" 		><img src="img/horizontal/skate-girl.png"></div>
 				</div>
 			</div>
-			<div class="sp	nner">
+			<div class="spinner">
 				<div class="slices">
-					<div class="slice" 	data-name="Uno" 		>1</div>
-					<div class="slice" 	data-name="Due" 		>2</div>
-					<div class="slice" 	data-name="Tre" 		>3</div>
-					<div class="slice" 	data-name="Quattro" 	>4</div>
-					<div class="slice" 	data-name="Cinque" 		>5</div>
-					<div class="slice" 	data-name="Sei" 		>6</div>
-					<div class="slice" 	data-name="Sette"	 	>7</div>
-					<div class="slice" 	data-name="Otto" 		>8</div>
-					<div class="slice" 	data-name="Nove"	 	>9</div>
-					<div class="slice"	data-name="Dieci" 		>10</div>
+					<div class="slice" 	data-name="Hipster" 		><img src="img/horizontal/hipster.png"></div>
+					<div class="slice" 	data-name="Zombie" 			><img src="img/horizontal/zombie.png"></div>
+					<div class="slice" 	data-name="Geek" 			><img src="img/horizontal/geek.png"></div>
+					<div class="slice" 	data-name="Skate Girl" 		><img src="img/horizontal/skate-girl.png"></div>
+				</div>
+			</div>
+			<div class="spinner">
+				<div class="slices">
+					<div class="slice" 	data-name="Hipster" 		><img src="img/horizontal/hipster.png"></div>
+					<div class="slice" 	data-name="Zombie" 			><img src="img/horizontal/zombie.png"></div>
+					<div class="slice" 	data-name="Geek" 			><img src="img/horizontal/geek.png"></div>
+					<div class="slice" 	data-name="Skate Girl" 		><img src="img/horizontal/skate-girl.png"></div>
 				</div>
 			</div>
 		</div>
