Minor Fixes and Improved Documentation

--- a/examples/vertical/index.html
+++ b/examples/vertical/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<br>
 		<div class="spin-two-three" id="spin-a">
-			<div class="spinner head">
+			<div class="wheel head">
 				<div class="slices">
 					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
 					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
@@ -24,7 +24,7 @@
 					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
 				</div>
 			</div>
-			<div class="spinner torso">
+			<div class="wheel torso">
 				<div class="slices">
 					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
 					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
@@ -32,7 +32,7 @@
 					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
 				</div>
 			</div>
-			<div class="spinner legs">
+			<div class="wheel legs">
 				<div class="slices">
 					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
 					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
