--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 		<br>
 		<div class="spin-two-three" id="spin-two-three">
-			<div class="spinner">
+			<div class="wheel">
 				<div class="slices">
 					<div class="slice"><!-- slice content here --></div>
 					<div class="slice"><!-- slice content here --></div>
@@ -23,7 +23,7 @@
 					<div class="slice"><!-- slice content here --></div>
 				</div>
 			</div>
-			<div class="spinner">
+			<div class="wheel">
 				<div class="slices">
 					<div class="slice"><!-- slice content here --></div>
 					<div class="slice"><!-- slice content here --></div>
@@ -31,7 +31,7 @@
 					<div class="slice"><!-- slice content here --></div>
 				</div>
 			</div>
-			<div class="spinner">
+			<div class="wheel">
 				<div class="slices">
 					<div class="slice"><!-- slice content here --></div>
 					<div class="slice"><!-- slice content here --></div>
