--- a/examples/multiple/index.html
+++ b/examples/multiple/index.html
@@ -10,11 +10,58 @@
 <body>
 	<div class="">
 		<div class="controls">
-			<a href="#" class="spin-two-three-prev spin-b">&lt; PREV</a> -
+			<a href="#" class="spin-two-three-prev spin-a">&lt; PREV</a> -
+			<a href="#" class="spin-two-three-spin spin-a">SPIN</a> -
+			<a href="#" class="spin-two-three-next spin-a">NEXT &gt;</a>
+		</div>
+
+		<br>
+
+		<div class="controls">
+			<a href="#" class="spin-two-three-prev spin-all">&lt; PREV</a> -
 			<a href="#" class="spin-two-three-spin spin-all">SPIN</a> -
+			<a href="#" class="spin-two-three-next spin-all">NEXT &gt;</a>
+		</div>
+
+		<br>
+
+		<div class="controls">
+			<a href="#" class="spin-two-three-prev spin-b">&lt; PREV</a> -
+			<a href="#" class="spin-two-three-spin spin-b">SPIN</a> -
 			<a href="#" class="spin-two-three-next spin-b">NEXT &gt;</a>
 		</div>
+
+		<br>
 	
+		<div class="spin-two-three horizontal" id="spin-a">
+			<div class="wheel">
+				<div class="slices">
+					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
+					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
+					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
+					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
+				</div>
+			</div>
+			<div class="wheel">
+				<div class="slices">
+					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
+					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
+					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
+					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
+				</div>
+			</div>
+			<div class="wheel">
+				<div class="slices">
+					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
+					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
+					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
+					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
+				</div>
+			</div>
+		</div>
+
+		<br>
+
 		<div class="spin-two-three horizontal" id="spin-b">
 			<div class="wheel">
 				<div class="slices">
@@ -49,7 +96,7 @@
 	<script src="../../js/spin-two-three.js"></script>
 
 	<script>
-		
+		var spinA = new SpinTwoThree(document.querySelector("#spin-a"), "spin-a");
 		var spinB = new SpinTwoThree(document.querySelector("#spin-b"), "spin-b");
 	</script>
 </body>
