Vertical slots overflow fix

--- a/examples/fluid/index.html
+++ b/examples/fluid/index.html
@@ -27,8 +27,8 @@
 		</div>
 	</div>
 
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.9.5/plugins/CSSPlugin.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.9.5/TweenLite.min.js"></script>
+	<script src="../../libs/plugins/CSSPlugin.min.js"></script>
+	<script src="../../libs/TweenLite.min.js"></script>
 	<script src="../../js/polyfills.js"></script>
 	<script src="../../js/spin-two-three.js"></script>
 
