Added Basket Player Figure

--- a/examples/vertical/index.html
+++ b/examples/vertical/index.html
@@ -22,6 +22,7 @@
 					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
 					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
 					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
+					<div class="slice" 	data-name="Basket Player" 	><img src="img/basket-player.png"></div>
 				</div>
 			</div>
 			<div class="wheel torso">
@@ -30,6 +31,7 @@
 					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
 					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
 					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
+					<div class="slice" 	data-name="Basket Player" 	><img src="img/basket-player.png"></div>
 				</div>
 			</div>
 			<div class="wheel legs">
@@ -38,6 +40,7 @@
 					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
 					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
 					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
+					<div class="slice" 	data-name="Basket Player" 	><img src="img/basket-player.png"></div>
 				</div>
 			</div>
 		</div>
