Improved Multiple Example

--- a/examples/multiple/index.html
+++ b/examples/multiple/index.html
@@ -1,103 +1,109 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="initial-scale=1.0">
-	<title>Spin Two Three - Horizontal Example</title>
-	<link rel="stylesheet" href="../../css/spin-two-three.css">
-	<link rel="stylesheet" href="css/eye-candy.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="initial-scale=1.0">
+  <title>Spin Two Three - Horizontal Example</title>
+  <link rel="stylesheet" href="../../css/spin-two-three.css">
+  <link rel="stylesheet" href="css/eye-candy.css">
 </head>
 <body>
-	<div class="">
-		<div class="controls">
-			<a href="#" class="spin-two-three-prev spin-a">&lt; PREV</a> -
-			<a href="#" class="spin-two-three-spin spin-a">SPIN</a> -
-			<a href="#" class="spin-two-three-next spin-a">NEXT &gt;</a>
-		</div>
+  <div class="">
+    <div class="controls">
+      <a href="#" class="spin-two-three-prev spin-a">&lt; PREV</a> -
+      <a href="#" class="spin-two-three-spin spin-a">SPIN</a> -
+      <a href="#" class="spin-two-three-next spin-a">NEXT &gt;</a>
+    </div>
 
-		<br>
+    <br>
 
-		<div class="controls">
-			<a href="#" class="spin-two-three-prev spin-all">&lt; PREV</a> -
-			<a href="#" class="spin-two-three-spin spin-all">SPIN</a> -
-			<a href="#" class="spin-two-three-next spin-all">NEXT &gt;</a>
-		</div>
+    <div class="controls">
+      <a href="#" class="spin-two-three-prev spin-all">&lt; PREV</a> -
+      <a href="#" class="spin-two-three-spin spin-all">SPIN</a> -
+      <a href="#" class="spin-two-three-next spin-all">NEXT &gt;</a>
+    </div>
 
-		<br>
+    <br>
 
-		<div class="controls">
-			<a href="#" class="spin-two-three-prev spin-b">&lt; PREV</a> -
-			<a href="#" class="spin-two-three-spin spin-b">SPIN</a> -
-			<a href="#" class="spin-two-three-next spin-b">NEXT &gt;</a>
-		</div>
+    <div class="controls">
+      <a href="#" class="spin-two-three-prev spin-b">&lt; PREV</a> -
+      <a href="#" class="spin-two-three-spin spin-b">SPIN</a> -
+      <a href="#" class="spin-two-three-next spin-b">NEXT &gt;</a>
+    </div>
 
-		<br>
-	
-		<div class="spin-two-three horizontal" id="spin-a">
-			<div class="wheel">
-				<div class="slices">
-					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
-					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
-					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
-					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
-				</div>
-			</div>
-			<div class="wheel">
-				<div class="slices">
-					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
-					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
-					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
-					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
-				</div>
-			</div>
-			<div class="wheel">
-				<div class="slices">
-					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
-					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
-					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
-					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
-				</div>
-			</div>
-		</div>
+    <br>
+  
+    <div class="spin-two-three horizontal" id="spin-a">
+      <div class="wheel">
+        <div class="slices">
+          <div class="slice"  data-name="Hipster"     ><img src="img/hipster.png"></div>
+          <div class="slice"  data-name="Zombie"      ><img src="img/zombie.png"></div>
+          <div class="slice"  data-name="Geek"        ><img src="img/geek.png"></div>
+          <div class="slice"  data-name="Skate Girl"  ><img src="img/skate-girl.png"></div>
+        </div>
+      </div>
+      <div class="wheel">
+        <div class="slices">
+          <div class="slice"  data-name="Hipster"     ><img src="img/hipster.png"></div>
+          <div class="slice"  data-name="Zombie"      ><img src="img/zombie.png"></div>
+          <div class="slice"  data-name="Geek"        ><img src="img/geek.png"></div>
+          <div class="slice"  data-name="Skate Girl"  ><img src="img/skate-girl.png"></div>
+        </div>
+      </div>
+      <div class="wheel">
+        <div class="slices">
+          <div class="slice"  data-name="Hipster"     ><img src="img/hipster.png"></div>
+          <div class="slice"  data-name="Zombie"      ><img src="img/zombie.png"></div>
+          <div class="slice"  data-name="Geek"        ><img src="img/geek.png"></div>
+          <div class="slice"  data-name="Skate Girl"  ><img src="img/skate-girl.png"></div>
+        </div>
+      </div>
+    </div>
 
-		<br>
+    <br>
 
-		<div class="spin-two-three horizontal" id="spin-b">
-			<div class="wheel">
-				<div class="slices">
-					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
-					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
-					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
-					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
-				</div>
-			</div>
-			<div class="wheel">
-				<div class="slices">
-					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
-					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
-					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
-					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
-				</div>
-			</div>
-			<div class="wheel">
-				<div class="slices">
-					<div class="slice" 	data-name="Hipster" 		><img src="img/hipster.png"></div>
-					<div class="slice" 	data-name="Zombie" 			><img src="img/zombie.png"></div>
-					<div class="slice" 	data-name="Geek" 			><img src="img/geek.png"></div>
-					<div class="slice" 	data-name="Skate Girl" 		><img src="img/skate-girl.png"></div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="spin-two-three horizontal" id="spin-b">
+      <div class="wheel">
+        <div class="slices">
+          <div class="slice"  data-name="Hipster"     ><img src="img/hipster.png"></div>
+          <div class="slice"  data-name="Zombie"      ><img src="img/zombie.png"></div>
+          <div class="slice"  data-name="Geek"        ><img src="img/geek.png"></div>
+          <div class="slice"  data-name="Skate Girl"  ><img src="img/skate-girl.png"></div>
+        </div>
+      </div>
+      <div class="wheel">
+        <div class="slices">
+          <div class="slice"  data-name="Hipster"     ><img src="img/hipster.png"></div>
+          <div class="slice"  data-name="Zombie"      ><img src="img/zombie.png"></div>
+          <div class="slice"  data-name="Geek"        ><img src="img/geek.png"></div>
+          <div class="slice"  data-name="Skate Girl"  ><img src="img/skate-girl.png"></div>
+        </div>
+      </div>
+      <div class="wheel">
+        <div class="slices">
+          <div class="slice"  data-name="Hipster"     ><img src="img/hipster.png"></div>
+          <div class="slice"  data-name="Zombie"      ><img src="img/zombie.png"></div>
+          <div class="slice"  data-name="Geek"        ><img src="img/geek.png"></div>
+          <div class="slice"  data-name="Skate Girl"  ><img src="img/skate-girl.png"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-	<script src="../../libs/plugins/CSSPlugin.min.js"></script>
-	<script src="../../libs/TweenLite.min.js"></script>
-	<script src="../../js/polyfills.js"></script>
-	<script src="../../js/spin-two-three.js"></script>
+  <script src="../../libs/plugins/CSSPlugin.min.js"></script>
+  <script src="../../libs/TweenLite.min.js"></script>
+  <script src="../../js/polyfills.js"></script>
+  <script src="../../js/spin-two-three.js"></script>
 
-	<script>
-		var spinA = new SpinTwoThree(document.querySelector("#spin-a"), "spin-a");
-		var spinB = new SpinTwoThree(document.querySelector("#spin-b"), "spin-b");
-	</script>
+  <script>
+    var spinA = new SpinTwoThree(document.querySelector("#spin-a"), "spin-a");
+    var spinB = new SpinTwoThree(document.querySelector("#spin-b"), "spin-b");
+    spinB.setCallbackComplete(onCompleteB);
+
+    function onCompleteB(e) {
+      var id = e.slots[0].getSlice(0).index;
+      spinA.gotoSlice(id);
+    }
+  </script>
 </body>
 </html>
